# e2fsprogs_build

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cygwin_apply_patch.sh
cmake/: CMakeLists.txt  check.cmake  e2fsprogs-tools.cmake  e2fsprogs_defaults.cmake  headers.cmake  libbase.cmake  libcrypto.cmake  libcutils.cmake  libext2_blkid.cmake  libext2_com_err.cmake  libext2_e2p.cmake  libext2_misc.cmake  libext2_ss.cmake  libext2_support.cmake  libext2_uuid.cmake  libext2fs.cmake  liblog.cmake  libpcre.cmake  libselinux.cmake  libsparse.cmake  libz.cmake
patches/core/: 0001-libcutils-Add-missing-cygwin-definations.patch
patches/e2fsprogs/: 0001-e2fsprogs-Add-cygwin-definations.patch
patches/libbase/: 0001-libbase-Fix-cygwin-missing-definations.patch
patches/logging/: 0001-liblog-Add-cygwin-missing-definations.patch
src/: capability.h
